@startuml

title UC6 - Especificar Tarefa
left to right direction

class Plataforma <<Singleton>>{
    -String designacao
}

class Colaborador {
    -String funcao
    -String telefone
}

class Tarefa {
    -String referencia
    -String designacao
    -String descInformal
    -String descTecnica
    -Integer duracaoEst
    -Double custoEst
}

class Utilizador {
    -String nome
    -Email email
    -Email password
}

class Email {
    -String email
}

class Password {
    -String password
}

class Categoria {
    -String codigo
    -String descBreve
    -String descDetalhada
}

class AreaActividade {
    -String codigo
    -String descBreve
    -String descDetalhada
}

Plataforma"1" -- "*"Organizacao: tem registadas >
Organizacao"1" -- "1..*"Colaborador: tem >
Colaborador"1" -- "*"Tarefa: especificada por <
Organizacao"1" -- "*"Tarefa: possui >
Tarefa"*" -- "1"Categoria: enquadra-se em >
Categoria"1..*" -- "1"AreaActividade: pertence a > 
Plataforma"1" -- "*"Categoria: possui >
Colaborador"0..1" --|> "1"Utilizador: actua como <
Utilizador "1" -- "1"Email: possui >
Utilizador "1" -- "1"Password: possui >
Organização "1" -- "1"Email: possui >


@enduml